--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "jade": "~1.11.0",
-    "mysql": "2.8.0",
     "morgan": "~1.6.1",
+    "multer": "^1.1.0",
+    "mysql": "2.8.0",
     "nconf": "~0.6.9",
-    "serve-favicon": "~2.3.0",
     "sanitize-html": "1.11.0",
+    "serve-favicon": "~2.3.0",
     "vue": "0.12.16",
     "vue-resource": "0.1.16"
   },
