--- a/package.json
+++ b/package.json
@@ -7,15 +7,19 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "bcrypt": "^0.8.5",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "express-session": "^1.12.1",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
     "multer": "^1.1.0",
     "mysql": "2.8.0",
     "nconf": "~0.6.9",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "sanitize-html": "1.11.0",
     "serve-favicon": "~2.3.0",
     "vue": "0.12.16",
